# yoloFund

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yaml
migrations/models/: 1_20210213013830_None.sql  2_20210213110147_update.sql
stock_tracker/: main.py
stock_tracker/api/api_v1/: api.py
stock_tracker/api/api_v1/endpoints/: exchanges.py  tickers.py
stock_tracker/core/: config.py
stock_tracker/models/: __init__.py  exchanges.py  ticker_mentions.py  tickers.py
stock_tracker/reddit/: scrape.py
stock_tracker/scheduled/: tickers.py
stock_tracker/scraping/: finnhub.py  reddit.py  schemas.py  scrape.py
tests/: test_stock_tracker.py
